--- a/ReadApp/MainPage.xaml
+++ b/ReadApp/MainPage.xaml
@@ -5,18 +5,20 @@
     xmlns:local="using:ReadApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" RequestedTheme="Dark">
 
     <Page.Resources>
         <DataTemplate x:Key="RememberModelTemplate">
             <StackPanel Orientation="Horizontal">
-                <TextBlock  HorizontalAlignment="Left" VerticalAlignment="Top" Width="40"/>
-                <TextBlock  HorizontalAlignment="Left" VerticalAlignment="Top" Width="40"/>
-                <ItemsControl />
+                <TextBlock Text="{Binding Name, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBlock Text="{Binding Day, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40"/>
+                <ItemsControl ItemsSource="{Binding Names}"/>
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
-
+    <Page.DataContext>
+        <local:MainPageData />
+    </Page.DataContext>
 
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -29,8 +31,8 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  Grid.Row="1" />
-            <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap"  d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
+            <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}"/>
+            <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
@@ -38,7 +40,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" 
-             VerticalAlignment="Top"/>
+             Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
             <Ellipse Fill="#FFF4F4F5" Grid.Row="1" Stroke="Black"/>
         </Grid>
 
