--- a/ReadApp/MainPage.xaml
+++ b/ReadApp/MainPage.xaml
@@ -5,13 +5,38 @@
     xmlns:local="using:ReadApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" RequestedTheme="Dark">
+    mc:Ignorable="d" RequestedTheme="Light">
 
     <Page.Resources>
         <DataTemplate x:Key="RememberModelTemplate">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="{Binding Name , Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 <TextBlock Text="{Binding Last , Mode=OneWay}" Margin="15,0,0,0"/>
+            </StackPanel>
+        </DataTemplate>
+        <DataTemplate x:Key="ReadNoticeTemplate">
+            <StackPanel BorderThickness="0">
+                <StackPanel Margin="0,10,0,0" Orientation="Horizontal" UseLayoutRounding="False">
+                    <StackPanel>
+                        <Ellipse x:Name="Image" Height="150" Stroke="Black" Width="150" VerticalAlignment="Top" d:LayoutOverrides="TopPosition, BottomPosition" Margin="15,10,15,15">
+                            <Ellipse.Fill>
+                                <ImageBrush Stretch="Fill" ImageSource="{Binding Image}"/>
+                            </Ellipse.Fill>
+                        </Ellipse>
+                    </StackPanel>
+                    <StackPanel>
+                        <TextBlock x:Name="Title" Text="{Binding Title}" VerticalAlignment="Top" Margin="5,25,0,0" FontSize="21" FontWeight="Bold" Foreground="#FF013C57"/>
+                        <TextBlock x:Name="Date" Text="{Binding Date}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,5,0,0" FontSize="12" Foreground="#FFF10E0E"/>
+                        <Grid x:Name="_10" BorderThickness="0" Margin="0" Padding="0,8,0,0" MinWidth="450" Width="650" MaxWidth="650">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="1" x:Name="Text" TextWrapping="Wrap" Text="{Binding Text}" HorizontalAlignment="Left" MinWidth="2"  Margin="0,10,0,25"/>
+                        </Grid>
+                    </StackPanel>
+
+                </StackPanel>
             </StackPanel>
         </DataTemplate>
     </Page.Resources>
@@ -33,14 +58,26 @@
             <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}"/>
             <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
         </Grid>
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" BorderBrush="#FF1B1212">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="13*"/>
+              
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" 
-             Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
-            <Ellipse Fill="#FFF4F4F5" Grid.Row="1" Stroke="Black"/>
+             Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Margin="5,5,0,0" FontSize="20" Foreground="#FF0F5AC5"/>
+            <Ellipse Grid.Column="1" x:Name="Imangen" Margin="0,0,10,-0.667" Stroke="Black" d:LayoutOverrides="TopPosition, BottomPosition" HorizontalAlignment="Right" Width="45" Height="45" MaxWidth="45" MaxHeight="45">
+                <Ellipse.Fill>
+                    <ImageBrush Stretch="Fill" ImageSource="{Binding SelectedRead.Picture}"/>
+                </Ellipse.Fill>
+            </Ellipse>
+            <Ellipse Fill="#FFF4F4F5" Grid.Row="1" Stroke="Black" Grid.ColumnSpan="2" Margin="0,-0.333,0,0" d:LayoutOverrides="TopPosition, BottomPosition"/>
+            <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" Margin="0,-0.333,0,0" d:LayoutOverrides="TopPosition, BottomPosition">
+                <ItemsControl ItemsSource="{Binding SelectedRead.Notices}" ItemTemplate="{StaticResource ReadNoticeTemplate}"/>
+            </ScrollViewer>
         </Grid>
 
     </Grid>
