--- a/ReadApp/MainPage.xaml
+++ b/ReadApp/MainPage.xaml
@@ -34,6 +34,7 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="1" x:Name="Text" TextWrapping="Wrap" Text="{Binding Text}" HorizontalAlignment="Left" MinWidth="2"  Margin="0,10,0,25"/>
                         </Grid>
+                        <AppBarButton Click="Button_OnClick" x:Name="button" Content="Button" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="70" Background="#33164CBF" Icon="Mail" Height="45" Margin="0,0,85,0" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
                     </StackPanel>
 
                 </StackPanel>
@@ -61,7 +62,7 @@
         <Grid Grid.Column="1" BorderBrush="#FF1B1212">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="13*"/>
-              
+
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
