--- a/ReadApp/MainPage.xaml
+++ b/ReadApp/MainPage.xaml
@@ -34,7 +34,14 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="1" x:Name="Text" TextWrapping="Wrap" Text="{Binding Text}" HorizontalAlignment="Left" MinWidth="2"  Margin="0,10,0,25"/>
                         </Grid>
-                        <AppBarButton Click="Button_OnClick" x:Name="button" Content="Button" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="70" Background="#33164CBF" Icon="Mail" Height="45" Margin="0,0,85,0" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
+                        <Grid>
+                            <AppBarButton Click="Button_OnClick" x:Name="btnEmail" Content="Button" Background="#33164CBF" Icon="Mail" Height="50" HorizontalAlignment="Right" Margin="0,0,102,0" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
+                            <AppBarButton  
+                                Command="{Binding DataContext.AddNoticeToCommand, ElementName=GridContext}"
+                                CommandParameter="{Binding}"   
+                                x:Name="btnCalendar" Content="Button" Background="#33164CBF" Icon="Calendar" Height="50" HorizontalAlignment="Right" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
+
+                        </Grid>
                     </StackPanel>
 
                 </StackPanel>
@@ -42,11 +49,20 @@
         </DataTemplate>
     </Page.Resources>
     <Page.DataContext>
-        <local:MainPageData />
+        <local:MainPageDataViewModel />
     </Page.DataContext>
+    <Page.BottomAppBar>
+        <CommandBar>
+            <CommandBar.Content>
+                <Grid/>
+            </CommandBar.Content>
+            <AppBarButton x:Name="appBarButton" HorizontalAlignment="Stretch" Icon="Accept" Label="appbarbutton" VerticalAlignment="Stretch" d:LayoutOverrides="Height" Command="{Binding AddNoticeToCommand}"/>
+        </CommandBar>
+    </Page.BottomAppBar>
 
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+    <Grid x:Name="GridContext" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="320"/>
             <ColumnDefinition/>
