--- a/ReadApp/Views/About.xaml
+++ b/ReadApp/Views/About.xaml
@@ -1,14 +1,17 @@
 ﻿<Page
-    x:Class="ReadApp.About"
+    x:Class="ReadApp.Views.About"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ReadApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:common="using:Common"
+    xmlns:viewModels="using:Common.ViewModels"
     mc:Ignorable="d"  RequestedTheme="{Binding Configurations.Theme, Mode=TwoWay}">
     <Page.DataContext>
-        <local:MainPageDataViewModel/>
+        <viewModels:MainPageDataViewModel/>
     </Page.DataContext>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
 
         <StackPanel VerticalAlignment="Top" Margin="12,12,12,0">
