--- a/ReadApp/Views/MainPage.xaml
+++ b/ReadApp/Views/MainPage.xaml
@@ -1,5 +1,4 @@
 ﻿<Page
-    x:Class="ReadApp.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ReadApp"
@@ -7,13 +6,15 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:common="using:Common"
     xmlns:viewModels="using:Common.ViewModels"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Behavior="using:ReadApp.Behavior"
+    x:Class="ReadApp.Views.MainPage"
     mc:Ignorable="d" RequestedTheme="{Binding Configurations.Theme, Mode=TwoWay}">
 
     <Page.Resources>
         <DataTemplate x:Key="RememberModelTemplate">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding Name , Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                <TextBlock Text="{Binding Last , Mode=OneWay}" Margin="15,0,0,0"/>
+                <TextBlock Text="{Binding Name, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <TextBlock Text="{Binding Last, Mode=OneWay}" Margin="15,0,0,0"/>
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ReadNoticeTemplate">
@@ -82,7 +83,11 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}"/>
+            <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}">
+                <Interactivity:Interaction.Behaviors>
+                    <Behavior:AutoScrollBehavior/>
+                </Interactivity:Interaction.Behaviors>
+            </ListView>
             <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
         </Grid>
         <Grid Grid.Column="1" BorderBrush="#FF1B1212">
