Universal y Continuum -  Familia de dispositivos

--- a/Test Layout/Loyout/DeviceFamily-Mobile/MainPage.xaml
+++ b/Test Layout/Loyout/DeviceFamily-Mobile/MainPage.xaml
@@ -8,12 +8,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="SizeScreen"/>
-        </VisualStateManager.VisualStateGroups>
-        <Grid x:Name="stackPanel" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition">
-            <Button x:Name="button" Content="Escritorio" Margin="115,138,0,0" VerticalAlignment="Top" Click="button_Click"/>
-        </Grid>
+        <Button x:Name="button" Content="Mobile" Margin="105,80,150,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" d:LayoutOverrides="LeftPosition, RightPosition" Click="button_Click"/>
 
     </Grid>
 </Page>
