--- a/ReadApp/Views/MainPage.xaml
+++ b/ReadApp/Views/MainPage.xaml
@@ -9,7 +9,7 @@
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Behavior="using:ReadApp.Behavior"
     xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     x:Class="ReadApp.Views.MainPage"
-    mc:Ignorable="d" RequestedTheme="{Binding Configurations.Theme, Mode=TwoWay}" Background="#FF434343">
+    mc:Ignorable="d" RequestedTheme="{Binding Configurations.Theme, Mode=TwoWay}" Background="#FF434343" NavigationCacheMode="Enabled">
 
     <Page.Resources>
         <DataTemplate x:Key="RememberModelTemplate">
@@ -19,38 +19,24 @@
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="ReadNoticeTemplate">
-            <StackPanel BorderThickness="0">
-                <StackPanel Margin="0,10,0,0" Orientation="Horizontal" UseLayoutRounding="False">
-                    <StackPanel>
-                        <Ellipse x:Name="Image" Height="150" Stroke="Black" Width="150" VerticalAlignment="Top" d:LayoutOverrides="TopPosition, BottomPosition" Margin="15,10,15,15">
-                            <Ellipse.Fill>
-                                <ImageBrush Stretch="Fill" ImageSource="{Binding Image}"/>
-                            </Ellipse.Fill>
-                        </Ellipse>
-                    </StackPanel>
-                    <StackPanel>
-                        <TextBlock x:Name="Title" Text="{Binding Title}" VerticalAlignment="Top" Margin="5,25,0,0" FontSize="21" FontWeight="Bold"/>
-                        <TextBlock x:Name="Date" Text="{Binding Date}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,5,0,0" FontSize="12" Foreground="#FFF10E0E"/>
-                        <Grid x:Name="_10" BorderThickness="0" Margin="0" Padding="0,8,0,0" MinWidth="450" Width="650" MaxWidth="650">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="17*" />
-                                <ColumnDefinition Width="113*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="1" x:Name="Text" TextWrapping="Wrap" Text="{Binding Text}" HorizontalAlignment="Left" MinWidth="2"  Margin="0,18,0,0" Grid.ColumnSpan="2" Height="59.854" VerticalAlignment="Top"/>
-                        </Grid>
-                        <Grid Height="50">
-                            <AppBarButton Click="Button_OnClick" x:Name="btnEmail" Content="Button" Icon="Mail" Height="54" HorizontalAlignment="Right" Margin="0,0,102,-4" Label="Email" Style="{StaticResource AppBarButtonStyle1}" FontSize="19" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
-                            <AppBarButton  
+            <Grid BorderThickness="0" HorizontalAlignment="Left">
+                <Grid Margin="0,10,25,0" UseLayoutRounding="False" d:LayoutOverrides="Width, Height" MaxWidth="1150" HorizontalAlignment="Left">
+                    <Ellipse x:Name="Image" Height="150" Stroke="Black" VerticalAlignment="Top" Margin="15,10,0,0" Width="150" HorizontalAlignment="Left">
+                        <Ellipse.Fill>
+                            <ImageBrush Stretch="Fill" ImageSource="{Binding Image}"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Title}" VerticalAlignment="Top" Margin="193,34,0,0" FontSize="22" MinWidth="300" MinHeight="45" Width="563" ToolTipService.ToolTip="{Binding Title}"/>
+                    <TextBlock x:Name="Date" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Date}" VerticalAlignment="Top" Foreground="#FFC31F1F" Margin="194,65,0,0"/>
+                    <TextBlock x:Name="Text" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Text}" VerticalAlignment="Top" Margin="195,98,0,0" MaxHeight="60"/>
+                    <AppBarButton Click="Button_OnClick" x:Name="btnEmail" Content="Button" Icon="Mail" Height="54" HorizontalAlignment="Left" Margin="350,49,0,0" Label="Email" Style="{StaticResource AppBarButtonStyle1}" FontSize="19" d:LayoutOverrides="VerticalAlignment" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
+                    <AppBarButton  
                                 Command="{Binding DataContext.AddNoticeToCommand, ElementName=GridContext}"
                                 CommandParameter="{Binding}"   
-                                x:Name="btnCalendar" Content="Button" Icon="Calendar" Height="50" HorizontalAlignment="Right" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
+                                x:Name="btnCalendar" Content="Button" Icon="Calendar" Height="50" HorizontalAlignment="Left" d:LayoutOverrides="VerticalAlignment" Margin="430,50,0,0" Visibility="{Binding EmailVisibility, Mode=OneWay}"/>
 
-                        </Grid>
-                    </StackPanel>
-
-                </StackPanel>
-            </StackPanel>
+                </Grid>
+            </Grid>
         </DataTemplate>
     </Page.Resources>
     <Page.DataContext>
@@ -75,6 +61,7 @@
             <CommandBar.Content>
                 <Grid/>
             </CommandBar.Content>
+            <AppBarButton x:Name="appBarButton1" HorizontalAlignment="Stretch" Icon="AlignCenter" Label="Menu" VerticalAlignment="Stretch" d:LayoutOverrides="Height" Command="{Binding SwitchMenuCommand}" Visibility="{Binding VisibleMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </CommandBar>
     </Page.BottomAppBar>
 
@@ -147,11 +134,73 @@
                     </Storyboard>
                 </VisualState>
             </VisualStateGroup>
+            <VisualStateGroup x:Name="ScrenStates">
+                <VisualState x:Name="Big">
+                    <VisualState.Setters>
+                        <Setter Target="splitView.(SplitView.IsPaneOpen)" Value="True"/>
+                        <Setter Target="splitView.(SplitView.DisplayMode)" Value="Inline"/>
+                        <Setter Target="appBarButton1.(UIElement.Visibility)" Value="Collapsed"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1150"/>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Small">
+                    <VisualState.Setters>
+                        <Setter Target="splitView.(SplitView.DisplayMode)" Value="Overlay"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"/>
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="320"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
+
+        <SplitView x:Name="splitView" BorderThickness="0" Grid.ColumnSpan="2" DisplayMode="Inline" IsPaneOpen="{Binding OpenMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <SplitView.Pane>
+                <Grid>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}">
+                            <Interactivity:Interaction.Behaviors>
+                                <Behavior:AutoScrollBehavior/>
+                            </Interactivity:Interaction.Behaviors>
+                        </ListView>
+                        <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
+                    </Grid>
+                </Grid>
+            </SplitView.Pane>
+            <Grid BorderBrush="#FF1B1212" Margin="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="13*"/>
+
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" 
+             Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Margin="5,5,0,0" FontSize="20" Foreground="#FF0F5AC5"/>
+                <Ellipse Grid.Column="1" x:Name="Imangen" Margin="0,5,11,0" Stroke="Black" d:LayoutOverrides="TopPosition, BottomPosition" HorizontalAlignment="Right" Width="45" Height="45" MaxWidth="45" MaxHeight="45">
+                    <Ellipse.Fill>
+                        <ImageBrush Stretch="Fill" ImageSource="{Binding SelectedRead.Picture}"/>
+                    </Ellipse.Fill>
+                </Ellipse>
+                <ScrollViewer x:Name="scrollViewer" Grid.Row="1" Grid.ColumnSpan="2" Margin="0,-0.333,0,0" d:LayoutOverrides="TopPosition, BottomPosition">
+                    <ItemsControl ItemTemplate="{StaticResource ReadNoticeTemplate}" ItemsSource="{Binding SelectedRead.Notices}">
+                        <ItemsControl.ItemContainerTransitions>
+                            <TransitionCollection>
+                                <EntranceThemeTransition IsStaggeringEnabled="True"/>
+                            </TransitionCollection>
+                        </ItemsControl.ItemContainerTransitions>
+                    </ItemsControl>
+                </ScrollViewer>
+                <Grid Grid.RowSpan="2"/>
+            </Grid>
+        </SplitView>
         <Grid x:Name="grid" d:LayoutOverrides="LeftPosition, RightPosition, TopPosition, BottomPosition" Grid.ColumnSpan="2" Background="#FF2E2E2E" Opacity="0.9" Canvas.ZIndex="1" d:IsHidden="True">
             <StackPanel x:Name="stackPanel" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center">
                 <TextBlock x:Name="textBlock1" Style="{StaticResource HeaderTextBlockStyle}" TextWrapping="Wrap" Text="Cargando ...">
@@ -162,44 +211,7 @@
                 <ProgressBar x:Name="progressBar" Height="10" VerticalAlignment="Stretch" IsIndeterminate="True" Margin="0,8,0,0" FontSize="22"/>
             </StackPanel>
         </Grid>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <ListView x:Name="listView" ItemTemplate="{StaticResource RememberModelTemplate}"  ItemsSource="{Binding ReadModels}" Grid.Row="1" SelectedItem="{Binding SelectedRead, Mode=TwoWay}">
-                <Interactivity:Interaction.Behaviors>
-                    <Behavior:AutoScrollBehavior/>
-                </Interactivity:Interaction.Behaviors>
-            </ListView>
-            <TextBox x:Name="textBox" Margin="10,10,10,8" TextWrapping="Wrap" Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" d:LayoutOverrides="Height" PlaceholderText="Search for names"/>
-        </Grid>
-        <Grid Grid.Column="1" BorderBrush="#FF1B1212">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="13*"/>
 
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" 
-             Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Margin="5,5,0,0" FontSize="20" Foreground="#FF0F5AC5"/>
-            <Ellipse Grid.Column="1" x:Name="Imangen" Margin="0,5,11,0" Stroke="Black" d:LayoutOverrides="TopPosition, BottomPosition" HorizontalAlignment="Right" Width="45" Height="45" MaxWidth="45" MaxHeight="45">
-                <Ellipse.Fill>
-                    <ImageBrush Stretch="Fill" ImageSource="{Binding SelectedRead.Picture}"/>
-                </Ellipse.Fill>
-            </Ellipse>
-            <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" Margin="0,-0.333,0,0" d:LayoutOverrides="TopPosition, BottomPosition">
-                <ItemsControl ItemTemplate="{StaticResource ReadNoticeTemplate}" ItemsSource="{Binding SelectedRead.Notices}">
-                    <ItemsControl.ItemContainerTransitions>
-                        <TransitionCollection>
-                            <EntranceThemeTransition IsStaggeringEnabled="True"/>
-                        </TransitionCollection>
-                    </ItemsControl.ItemContainerTransitions>
-                </ItemsControl>
-            </ScrollViewer>
-        </Grid>
 
     </Grid>
 </Page>
