--- a/ReadApp/Views/MainPage.xaml
+++ b/ReadApp/Views/MainPage.xaml
@@ -61,7 +61,7 @@
             <CommandBar.Content>
                 <Grid/>
             </CommandBar.Content>
-            <AppBarButton x:Name="appBarButton1" HorizontalAlignment="Stretch" Icon="AlignCenter" Label="Menu" VerticalAlignment="Stretch" d:LayoutOverrides="Height" Command="{Binding SwitchMenuCommand}" Visibility="{Binding VisibleMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <AppBarButton x:Name="appBarButton1" HorizontalAlignment="Stretch" Icon="AlignCenter" Label="Menu" VerticalAlignment="Stretch" d:LayoutOverrides="Height" Visibility="Collapsed" Command="{Binding SwitchMenuCommand}" />
         </CommandBar>
     </Page.BottomAppBar>
 
@@ -143,11 +143,12 @@
                     </VisualState.Setters>
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowWidth="1150"/>
-                    </VisualState.StateTriggers>
+              </VisualState.StateTriggers>
                 </VisualState>
                 <VisualState x:Name="Small">
                     <VisualState.Setters>
                         <Setter Target="splitView.(SplitView.DisplayMode)" Value="Overlay"/>
+                        <Setter Target="appBarButton1.(UIElement.Visibility)" Value="Visible"/>
                     </VisualState.Setters>
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowWidth="0"/>
@@ -156,7 +157,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <SplitView x:Name="splitView" BorderThickness="0" Grid.ColumnSpan="2" DisplayMode="Inline" IsPaneOpen="{Binding OpenMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+        <SplitView x:Name="splitView" BorderThickness="0" Grid.ColumnSpan="2" DisplayMode="Inline" IsPaneOpen="{Binding OpenMenu}">
             <SplitView.Pane>
                 <Grid>
                     <Grid>
